--- a/AndroidPhpMySQL/res/layout/add_product.xml
+++ b/AndroidPhpMySQL/res/layout/add_product.xml
@@ -59,43 +59,70 @@
 	
 	<!-- Button Create Product -->
 
-	<EditText
-	    android:id="@+id/inputFmink"
-	    android:layout_width="69dp"
-	    android:layout_height="33dp"
-	    android:ems="10"
-	    android:inputType="number"
-	    android:width="70dp" >
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" >
 
-	    <requestFocus />
-	</EditText>
+		<EditText
+		    android:id="@+id/inputFmink"
+		    android:layout_width="69dp"
+		    android:layout_height="33dp"
+		    android:layout_weight="0.03"
+		    android:ems="10"
+		    android:inputType="number"
+		    android:width="70dp" >
 
-	<TextView
-	    android:id="@+id/textView1"
-	    android:layout_width="wrap_content"
+		    <requestFocus />
+		</EditText>
+
+		<EditText
+		    android:id="@+id/inputMmink"
+		    android:layout_width="68dp"
+		    android:layout_height="31dp"
+		    android:layout_weight="0.03"
+		    android:ems="10"
+		    android:inputType="number"
+		    android:width="70dp" />
+
+	</LinearLayout>
+
+	<LinearLayout
+	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:text="Female Mink"
-	    android:textAppearance="?android:attr/textAppearanceSmall" />
+	    android:orientation="vertical" >
 
-	<EditText
-	    android:id="@+id/inputMmink"
-	    android:layout_width="68dp"
-	    android:layout_height="31dp"
-	    android:ems="10"
-	    android:inputType="number"
-	    android:width="70dp"
-	   />
+		<LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content" >
 
-	<TextView
-	    android:id="@+id/textView2"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="Male Mink"
-	    android:textAppearance="?android:attr/textAppearanceSmall" />
+		    <TextView
+		        android:id="@+id/textView1"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="0.32"
+		        android:text="Female Mink"
+		        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+		    <TextView
+		        android:id="@+id/textView2"
+		        android:layout_width="151dp"
+		        android:layout_height="wrap_content"
+		        android:text="Male Mink"
+		        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+		</LinearLayout>
+
+	</LinearLayout>
 
 	<Button android:id="@+id/btnCreateProduct" 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:text="Create Product"/>
+
+	<Button
+	    android:id="@+id/btncancel"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="Cancel" />
 	
 </LinearLayout>
